--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,4 +42,4 @@ stages:
       displayName: Scan
       inputs:
         script: |
-         docker run --rm -v /var/run/docker.sock:/var/run/docker.sock -v $HOME/Library/Caches:/root/.cache/ aquasec/trivy --image $(containerRegistry)/$(imageRepository):$(tag)
+         docker run --rm -v /var/run/docker.sock:/var/run/docker.sock -v $HOME/Library/Caches:/root/.cache/ aquasec/trivy image $(containerRegistry)/$(imageRepository):$(tag)
